--- a/index.html
+++ b/index.html
@@ -560,13 +560,13 @@
                             value="true" 
                             id="user-privacy"
                             />
-                            <label class="checkbox-label" for="user-privacy">
+                            <label class="checkbox-label"
+                                for="user-privacy">
                                 <span class="checkbox-span"><svg 
                                     Class="checkbox-icon" 
-                                    width="8" 
-                                    height="10">
-                                    <use href="./images/checkbox.svg#icon-Checkbox"></use></svg></span>I accept the terms and conditions of the <a href="#" class="checkbox-link">Privacy Policy</a>
-                                
+                                    width="10" 
+                                    height="8">
+                                    <use href="./images/Yes.svg#icon-Vector"></use></svg></span>I accept the terms and conditions of the <a href="#" class="checkbox-link">Privacy Policy</a>
                             </label>
                         </div>
             
