--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                         <input 
                         class="footer-form-input"
                         type="email" 
-                        name="user_email"
+                        name="user-email"
                         placeholder="E-mail"/>
                     </label>
                 
